# tsmok

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.75456e9.4.10-pre1  tsmok.qbs
gui/: CMakeLists.txt  gui.qbs
launcher/: CMakeLists.txt  launcher.qbs  launcher_resource.qrc  main_launcher.cpp
launcher/qml/: Launcher.qml  OnePreference.qml
systema_nevrosum/: CMakeLists.txt
systema_nevrosum/CentralNS/: CMakeLists.txt
systema_nevrosum/CentralNS/Brain/: CMakeLists.txt  main_brain.cpp
systema_nevrosum/CentralNS/Brain/include/: brain.h  brain2.h
systema_nevrosum/CentralNS/Brain/src/: brain.cpp  brain2.cpp
systema_nevrosum/PeripheralNS/: CMakeLists.txt
transmitter/: CMakeLists.txt
